fixup! Make the layout of the top element with search options not break in Safari

--- a/style/main.css
+++ b/style/main.css
@@ -23,7 +23,7 @@
   display: flex;
   justify-content: center;
   margin: 1.5em auto;
-  width:  906px;
+  width:  1020px;
 }
 
 .select-box {
